[gd_scene load_steps=18 format=3 uid="uid://dcr67wj5hnxrw"]

[ext_resource type="Script" path="res://turnStateMachine.gd" id="1_kt5hb"]
[ext_resource type="Script" path="res://Player.gd" id="1_vqj43"]
[ext_resource type="PackedScene" uid="uid://c4m1h584fc7j0" path="res://betweenMenu.tscn" id="2_4br2y"]

[sub_resource type="PlaneMesh" id="PlaneMesh_vso4i"]
size = Vector2(40, 40)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_bbqqu"]
data = PackedVector3Array(10, 0, 10, -10, 0, 10, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10)

[sub_resource type="BoxMesh" id="BoxMesh_ae66r"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5ohwt"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vxwf1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_07xj4"]
sky_material = SubResource("ProceduralSkyMaterial_vxwf1")

[sub_resource type="Environment" id="Environment_cnw61"]
background_mode = 2
sky = SubResource("Sky_07xj4")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xblgj"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_eqgit"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gi74e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y05ys"]

[sub_resource type="Animation" id="Animation_qghi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight3D2:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bga1y"]
resource_name = "flash"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight3D2:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 7.928, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ougiq"]
_data = {
"RESET": SubResource("Animation_qghi4"),
"flash": SubResource("Animation_bga1y")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_kt5hb")

[node name="Room" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Room"]
mesh = SubResource("PlaneMesh_vso4i")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_bbqqu")

[node name="Wall" type="MeshInstance3D" parent="Room"]
transform = Transform3D(2, 0, 0, 0, 25, 0, 0, 0, 40, 20.461, 12.163, 0)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="Wall2" type="MeshInstance3D" parent="Room"]
transform = Transform3D(2, 0, 0, 0, 25, 0, 0, 0, 40, -20.757, 12.163, 0)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Wall2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="newFloor" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-1.31134e-07, -37.5, 2.09272e-14, 3, -1.63918e-06, -2.09272e-14, 1.04636e-15, 1.30795e-14, 60, 2.08165e-12, -1.42353, 2.08165e-12)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/newFloor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/newFloor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="Ceiling" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-1.31134e-07, -44.3617, 2.09272e-14, 3, -1.93911e-06, -2.09272e-14, 1.04636e-15, 1.54728e-14, 60, -1.27842, 23.41, 2.08165e-12)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Ceiling"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Ceiling/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="Wall3" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-8.74228e-08, 0, 40, 0, 25, 0, -2, 0, -1.74846e-06, -0.129, 12.163, -18.997)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Wall3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="Wall4" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-8.74228e-08, 0, 40, 0, 25, 0, -2, 0, -1.74846e-06, -0.129, 12.163, 18.882)
mesh = SubResource("BoxMesh_ae66r")

[node name="StaticBody3D" type="StaticBody3D" parent="Room/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Wall4/StaticBody3D"]
transform = Transform3D(1, 0, -5.68434e-14, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_5ohwt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cnw61")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="PlayerOne" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2676, 0)
collision_mask = 2
script = ExtResource("1_vqj43")

[node name="Neck" type="Node3D" parent="PlayerOne"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.655506, 0)

[node name="Camera3D" type="Camera3D" parent="PlayerOne/Neck"]

[node name="BulletSpawn" type="Node3D" parent="PlayerOne/Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.33388)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerOne"]
mesh = SubResource("CapsuleMesh_xblgj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerOne"]
shape = SubResource("ConvexPolygonShape3D_eqgit")

[node name="Area3D" type="Area3D" parent="PlayerOne"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerOne/Area3D"]
shape = SubResource("CapsuleShape3D_gi74e")

[node name="PlayerTwo" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2676, -2.35058)
script = ExtResource("1_vqj43")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerTwo"]
mesh = SubResource("CapsuleMesh_xblgj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerTwo"]
shape = SubResource("ConvexPolygonShape3D_eqgit")

[node name="Neck" type="Node3D" parent="PlayerTwo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.655506, 0)

[node name="Camera3D" type="Camera3D" parent="PlayerTwo/Neck"]

[node name="BulletSpawn" type="Node3D" parent="PlayerTwo/Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.33388)

[node name="Area3D" type="Area3D" parent="PlayerTwo"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerTwo/Area3D"]
shape = SubResource("CapsuleShape3D_y05ys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TransitionMenu" parent="CanvasLayer" instance=ExtResource("2_4br2y")]

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0670574, 0.997749, 0, -0.997749, 0.0670574, 0, 17.1276, -0.176893)
light_energy = 0.0

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ougiq")
}

[connection signal="area_entered" from="PlayerOne/Area3D" to="PlayerOne" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="PlayerTwo/Area3D" to="PlayerTwo" method="_on_area_3d_area_entered"]
